Overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@
     --color-tame: #F6EADA;
     --color-black: #18130E;
 }
-
+html {
+    height:100%;
+}
 body {
     background-color: var(--color-tame);
     margin: 0;
@@ -24,6 +26,7 @@ a {
     flex: 1;
     flex-wrap: wrap;
     padding: 4rem 0rem 2rem 4rem;
+
 }
 
 .welcome {
@@ -284,6 +287,7 @@ height:100%;
     }
     .main__summary {
         height: calc(88vh - 6rem);
+        overflow:hidden;
     }
     .main__details {
         overflow-y: scroll;
